--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
  "todo-tree.tree.scanMode": "workspace",
- "todo-tree.tree.showBadges": true,
- "todo-tree.tree.disableCompactFolders": true,
+ "todo-tree.tree.showBadges": false,
+ "todo-tree.tree.disableCompactFolders": false,
  "todo-tree.tree.showCountsInTree": false
 }
